--- a/ChopDeck/ChopDeck.csproj
+++ b/ChopDeck/ChopDeck.csproj
@@ -37,5 +37,9 @@
 	<ItemGroup>
 	  <Folder Include="Repository\Interfaces\" />
 	</ItemGroup>
-
+	<ItemGroup>
+	<None Update="appsettings.json">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
+	</ItemGroup>
 </Project>
