--- a/ChopDeck/ChopDeck.csproj
+++ b/ChopDeck/ChopDeck.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="dotenv.net" Version="3.2.1" />
+		<PackageReference Include="DotNetEnv" Version="3.1.1" />
 		<PackageReference Include="FakeItEasy" Version="8.3.0" />
 		<PackageReference Include="FluentAssertions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
